# task-relay

./: .gitignore  .sops.yaml  .sops.yaml.example  README.md  basic-design-v1.0.md  detailed-design-v1.0.md  personas.md
task-relay/: .dockerignore  .gitignore  .versions.yaml  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
task-relay/deploy/: .env.example  forgejo-compose.env.example  forgejo-compose.yml  install.sh  litestream.yml.example  restore-drill.sh  secrets-decrypt.sh
task-relay/deploy/systemd/: task-relay-db-check.service  task-relay-discord-bot.service  task-relay-forgejo-webhook.service  task-relay-journal-ingester.service  task-relay-journal-replay.service  task-relay-projection.service  task-relay-reconcile.service  task-relay-retention.service  task-relay-retention.timer  task-relay-router.service  task-relay.target
task-relay/docs/guides/: discord-setup.md  forgejo-setup.md  secret-management.md
task-relay/docs/reference/: runbook.md
task-relay/src/task_relay/: __init__.py  cli.py  clock.py  config.py  errors.py  ids.py  logging_conf.py  status.py  system_events.py  types.py
task-relay/tests/: conftest.py
task-relay/tests/integration/: test_cli.py  test_end_to_end.py  test_failure_injection.py  test_forgejo_server.py  test_phase2_e2e.py  test_redis_lease.py
task-relay/tests/unit/: _fake_transports.py  _test_helpers.py  test_adapter_runtime.py  test_adapters.py  test_db_queries.py  test_discord_bot.py  test_discord_sink.py  test_dispatcher.py  test_forgejo_sink_http.py  test_git_safety.py  test_ingester.py  test_ingress.py  (+15 more)
(+70 files in other folders)
