[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-relay"
version = "0.1.0"
description = "Webhook/Gateway driven AI agent task runner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "anthropic>=0.39",
  "httpx>=0.27",
  "redis>=5.0",
  "zstandard>=0.22",
  "discord.py>=2.3",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "structlog>=24.1",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "fakeredis[lua]>=2.23",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
task-relay = "task_relay.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/task_relay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "llm: tests that require live LLM credentials or local LLM CLIs",
]

[tool.ruff]
line-length = 100
target-version = "py311"
